@@ -193,8 +193,8 @@ partmap_module=`$grub_probe --target=partmap --device-map=${device_map} ${grubdi
 # Device abstraction module, if any (lvm, raid).
 devabstraction_module=`$grub_probe --target=abstraction --device-map=${device_map} ${grubdir}`
 
-# _chain is often useful
-modules="$modules $fs_module $partmap_module $devabstraction_module _chain"
+# The order in this list is critical.  Be careful when modifiing it.
+modules="$modules $fs_module $partmap_module $devabstraction_module"
 
 $grub_mkimage --output=${grubdir}/grub.efi $modules || exit 1
 
